--- a/Client/src/app/shared/components/stepper/stepper.component.html
+++ b/Client/src/app/shared/components/stepper/stepper.component.html
@@ -4,8 +4,9 @@
             <button 
             [class.active]="selectedIndex === i"
             (click)="onClick(i)"
+            [disabled]="true"
             class="nav-link text-uppercase font-weight-bold btn-block" style="padding: 1.20em">
-            {{step.label}}:{{step.completed}}
+            {{step.label}}
 
             </button>
         </li>
